
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint ;


 int CFLAG_CLEAR ;
 int CYC_SHIFT ;
 int DX ;
 int DY ;
 int FLAG_C ;
 int FLAG_N ;
 int FLAG_V ;
 int FLAG_X ;
 int FLAG_Z ;
 int MASK_OUT_ABOVE_8 (int) ;
 int MASK_OUT_BELOW_8 (int) ;
 int NFLAG_8 (int) ;
 int NFLAG_CLEAR ;
 int USE_CYCLES (int) ;
 int VFLAG_CLEAR ;
 int XFLAG_CLEAR ;
 int ZFLAG_SET ;

void m68k_op_lsl_8_r(void)
{
 uint* r_dst = &DY;
 uint shift = DX & 0x3f;
 uint src = MASK_OUT_ABOVE_8(*r_dst);
 uint res = MASK_OUT_ABOVE_8(src << shift);

 if(shift != 0)
 {
  USE_CYCLES(shift<<CYC_SHIFT);

  if(shift <= 8)
  {
   *r_dst = MASK_OUT_BELOW_8(*r_dst) | res;
   FLAG_X = FLAG_C = src << shift;
   FLAG_N = NFLAG_8(res);
   FLAG_Z = res;
   FLAG_V = VFLAG_CLEAR;
   return;
  }

  *r_dst &= 0xffffff00;
  FLAG_X = XFLAG_CLEAR;
  FLAG_C = CFLAG_CLEAR;
  FLAG_N = NFLAG_CLEAR;
  FLAG_Z = ZFLAG_SET;
  FLAG_V = VFLAG_CLEAR;
  return;
 }

 FLAG_C = CFLAG_CLEAR;
 FLAG_N = NFLAG_8(src);
 FLAG_Z = src;
 FLAG_V = VFLAG_CLEAR;
}
